src/Components/searchbar/searchbar.scss
.flexbox {
	border: 1px solid #dfe1e5;
	display: flex;
	height: 44px;
	width: 482px;
	border-radius: 30px;
	&:hover {
		box-shadow: 0 1px 6px 0 rgba(32, 33, 36, 0.28);
		border-color: rgba(223, 225, 229, 0);
	}
	margin: 0 auto;
}
.textbox {
	color: rgb(44, 44, 44);
	font: 16px arial, sans-serif;
	-webkit-tap-highlight-color: transparent;
	background-color: transparent;
	flex: 1;
	display: flex;
	border: none;
	margin: 0 15px 0 15px;
	outline: none;
}

@media only screen and (max-device-width: 640px) and (-webkit-min-device-pixel-ratio: 2) {
	.flexbox {
		width: 90%;
		border-radius: 3px;
		margin: 0 auto;
	}
}

